Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16292

ERROR: modpost: "delete_from_page_cache" undefined

XMLWordPrintable

    • 3
    • 9223372036854775807

      Kernel v5.16-rc4-44-g452e9e6992fe:

      commit 452e9e6992fe058a650c81d01a9982e3faf10278
      Author:     Matthew Wilcox (Oracle) <willy@infradead.org>
      AuthorDate: Sun May 9 09:33:42 2021 -0400
      Commit:     Matthew Wilcox (Oracle) <willy@infradead.org>
      CommitDate: Tue Jan 4 13:15:33 2022 -0500
      
          filemap: Add filemap_remove_folio and __filemap_remove_folio
          
          Reimplement __delete_from_page_cache() as a wrapper around
          __filemap_remove_folio() and delete_from_page_cache() as a wrapper
          around filemap_remove_folio().  Remove the EXPORT_SYMBOL as
          delete_from_page_cache() was not used by any in-tree modules.
          Convert page_cache_free_page() into filemap_free_folio().
          
          Signed-off-by: Matthew Wilcox (Oracle) <willy@infradead.org>
          Reviewed-by: Christoph Hellwig <hch@lst.de>
          Reviewed-by: William Kucharski <william.kucharski@oracle.com>
      

      Lustre build failed:

      ERROR: modpost: "delete_from_page_cache" [/tmp/rpmbuild-lustre-jenkins-NkFDQasu/BUILD/lustre-2.15.52_64_g2647af4/lustre/llite/lustre.ko] undefined!
      ERROR: modpost: "delete_from_page_cache" [/tmp/rpmbuild-lustre-jenkins-NkFDQasu/BUILD/lustre-2.15.52_64_g2647af4/lustre/mdc/mdc.ko] undefined!
      

            stancheff Shaun Tancheff
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: