lustre/autoconf/lustre-core.m4
@@ -2748,6 +2748,20 @@ EXTRA_KCFLAGS="$tmp_flags"
 ]) # LC_HAVE_KIOCB_COMPLETE_2ARGS
 
 #
+# LC_EXPORTS_DELETE_FROM_PAGE_CACHE
+#
+# Linux commit v5.16-rc4-44-g452e9e6992fe
+# filemap: Add filemap_remove_folio and __filemap_remove_folio
+#
+# Also removes the export of delete_from_page_cache
+#
+AC_DEFUN([LC_EXPORTS_DELETE_FROM_PAGE_CACHE], [
+LB_CHECK_EXPORT([delete_from_page_cache], [mm/filemap.c],
+	[AC_DEFINE(HAVE_DELETE_FROM_PAGE_CACHE, 1,
+			[delete_from_page_cache is exported])])
+]) # LC_EXPORTS_DELETE_FROM_PAGE_CACHE
+
+#
 # LC_HAVE_INVALIDATE_FOLIO
 #
 # linux commit v5.17-rc4-10-g128d1f8241d6
@@ -3027,6 +3041,7 @@ AC_DEFUN([LC_PROG_LINUX], [
 	# 5.16
 	LC_HAVE_SECURITY_DENTRY_INIT_WITH_XATTR_NAME_ARG
 	LC_HAVE_KIOCB_COMPLETE_2ARGS
+	LC_EXPORTS_DELETE_FROM_PAGE_CACHE
 
 	# 5.17
 	LC_HAVE_INVALIDATE_FOLIO
